--- a/The Digits of Pi/css/main.css
+++ b/The Digits of Pi/css/main.css
@@ -27,7 +27,7 @@ h1
   color: #333333;
 }
 
-.main, .time, .hardcore, .settings
+.main, .time, .hardcore, .settings, .mainshorter
 {
   background-color: #ffffff;
   border-radius: 16px;
@@ -62,7 +62,7 @@ h1
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   padding: 1em;
   text-align: center;
-  margin: 0.5em;
+  margin: 0.25em;
   animation: fadeIn 1.0s ease-in-out forwards;
   max-width: 17em;
 }
@@ -100,6 +100,11 @@ footer
   min-height: 12em;
 }
 
+.mainshorter
+{
+  min-height: 10em;
+}
+
 .hardcore 
 {
   min-height: 13em;
@@ -116,9 +121,12 @@ button, select
 {
   background-color: #f5f5f5;
   border-color: #f5f5f5;
+  border-style: none;
+  vertical-align: middle;
   color: black;
   padding: 5px 10px;
   border-radius: 8px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   height: 2.5em;
 }
 
